[tool.poetry]
name = "llm"
version = "0.1.1"
description = ""
authors = ["rochacbruno"]
readme = "README.md"
packages = [{include = "llm"}]

[tool.poetry.package]
include = ["llm/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.54"
swarm = { git = "https://github.com/openai/swarm.git", rev = "9db581cecaacea0d46a933d6453c312b034dbf47" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
isort = "^5.13.2"
mypy = "^1.13.0"
gitchangelog = "^3.0.4"
mkdocs = "^1.6.1"
black = "^24.10.0"
coverage = "^7.6.4"
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
